--- a/metadata.yaml
+++ b/metadata.yaml
@@ -46,6 +46,7 @@ subjects:
 - !lcsh 'Historical fiction'
 - !lcsh 'Love stories'
 - !lcsh 'Married women -- Fiction'
+- GITenberg
 title: "La Princesse De Clèves par Mme de La Fayette\r\nEdited with Introduction and\
   \ Notes"
 url: http://www.gutenberg.org/ebooks/20262
